After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 721406 - Accessible object:state-changed:focused events missing for links within a GtkLabel
Accessible object:state-changed:focused events missing for links within a Gtk...
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Accessibility
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on: 721410
Blocks:
 
 
Reported: 2014-01-03 16:45 UTC by Joanmarie Diggs (IRC: joanie)
Modified: 2014-01-04 15:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
accessible-event listener (211 bytes, text/x-python)
2014-01-03 16:45 UTC, Joanmarie Diggs (IRC: joanie)
Details

Description Joanmarie Diggs (IRC: joanie) 2014-01-03 16:45:26 UTC
Created attachment 265230 [details]
accessible-event listener

Steps to reproduce:
1. Launch gtk3-demo's link demo
2. Launch the attached accessible-event listener in a terminal
3. Tab amongst the three links in the demo.

Expected results: Each time a link within the GtkLabel became focused, an object:state-changed:focused event would be seen. 

Actual results: object:state-changed:focused are seen each time the first link ("text") within the GtkLabel becomes focused. Tabbing to the "keynav" and "Google" links results in no such event.