gtk/a11y/gtklabelaccessibleprivate.h
@@ -25,6 +25,7 @@ G_BEGIN_DECLS
 void _gtk_label_accessible_text_deleted  (GtkLabel *label);
 void _gtk_label_accessible_text_inserted (GtkLabel *label);
 void _gtk_label_accessible_update_links  (GtkLabel *label);
+void _gtk_label_accessible_focus_link_changed (GtkLabel *label);
 
 G_END_DECLS
 
